Fix css layout bug on home page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -87,10 +87,21 @@ table {
     border-spacing: 0
 }
 
-a:link, a:visited, a:hover  {
+a:link  {
+    text-decoration: none; 
+    color: #000;
+}
+
+a:visited {
+    text-decoration: none; 
+    color: #000;
+}
+
+a:hover {
     text-decoration: none; 
     color: $neon-purple;
 }
+
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Inconsolata', monospace;
@@ -174,19 +185,6 @@ img {
 *:focus {
     outline: 0;
     box-shadow: 0 0 0 1px rgba(21, 0, 162, 0.15)
-}
-
-*::-moz-selection {
-    background: #f9f1e2
-}
-
-*::selection {
-    background: #f9f1e2
-}
-
-*::-moz-selection {
-    background: #f9f1e2;
-    color: $neon-purple;
 }
 
 * {
@@ -305,20 +303,6 @@ img {
 h1.hero {
     font-size: 1.5rem;
     padding-bottom: 3rem;
-    line-height: 1.5em;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    cursor: help;
-    -webkit-touch-callout: initial;
-    -webkit-user-select: initial;
-    -khtml-user-select: initial;
-    -moz-user-select: initial;
-    -ms-user-select: initial;
-    user-select: initial
 }
 
 @media(min-width:641px) {
@@ -332,13 +316,6 @@ h1.hero {
 
 #ct {
     position: relative;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    cursor: help
 }
 
 #ct img {
